# cpp-course

./: .gitignore  05. Нововведения С++11 (часть 2).pptx
homework-1/task1/: CMakeLists.txt  main.c  task_scheduler.cpp  task_scheduler.hpp
homework-2/: README.md  main.cpp  sparse_matrix.hpp
homework-4/: README.md
homework-5/: README.md
